# doomdoja-ai

./: .env.example  .gitignore  INDEX.md  LICENSE  README.md  USAGE.md  add-task.sh  agent_memory.db  agent_runner.py  archive.html  check_health.py  memory.py  memory_cli.py  requirements-ci.txt  reverie.html  the-outsider.html
aetherfall/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
browser/: browser_tool.py  demo.py  register.py
computer_use/: __init__.py  browser_agent.py  (+4 more)
freight-copilot/backend/: pyproject.toml  requirements.txt
freight-copilot/backend/app/: __init__.py  audit.py  config.py  db.py  geo.py  importer.py  main.py  models.py  seed.py  services.py
freight-copilot/backend/app/adapters/: __init__.py  base.py  email.py  providers.py  timocom.py  transeu.py
freight-copilot/backend/app/agents/: __init__.py  base.py  carrier_matching.py  carrier_risk.py  communication.py  document_controller.py  intake.py  knowledge_base.py  monitoring.py  pricing.py  provider.py  safety_supervisor.py  scout.py
freight-copilot/backend/app/api/: __init__.py  routes.py
freight-copilot/backend/app/templates/: approvals.html  base.html  carriers.html  dashboard.html  documents.html  freight_detail.html  knowledge.html  opportunities.html  settings.html  transports.html
freight-copilot/backend/app/web/: __init__.py  views.py
freight-copilot/backend/tests/: conftest.py  test_adapters.py  test_agents.py  test_api.py  test_geo.py  test_import.py  test_llm_provider.py  test_providers.py  test_security.py
(+228 files in other folders)
