[project]
name = "freight-copilot-backend"
version = "0.1.0"
description = "Local-first, human-in-the-loop freight forwarding copilot (backend)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/Form() in defaults is the intended idiom.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
